@@ -6,6 +6,7 @@ Version: CURRENT
    - fix undefined warning in _convert_to_get (David K Trudgett)
    - fix potential cookie clobbering if cookie was set in earlier handler
      phase in send_cookie() (Carlyn Hicks).
+   - various undefined value warnings eliminated
 
 Version: 3.02
    - Add support for AuthNameSatisfy directive (can be Any/All, default: Any)
